manifests/prod/syncthing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing-deployment
  namespace: app-syncthing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: syncthing
  template:
    metadata:
      labels:
        app: syncthing
    spec:
      # securityContext:
      #   runAsUser: 2000
      #   runAsGroup: 2000
      #   fsGroup: 2000
      # hostname: yourdomain.org
      containers:
      - name: syncthing
        image: lscr.io/linuxserver/syncthing:latest
        # resources:
        #   limits:
        #     cpu: 200m
        #     memory: 512Mi
        # env:
        # - name: PUID
        #   value: "2000"
        # - name: GUID
        #   value: "2000"
        # - name: TZ
        #   value: "Europe/Warsaw"
        ports:
        - name: webui
          containerPort: 8384
        - name: tcp22000
          containerPort: 22000
          # type: TCP
        - name: udp22000
          containerPort: 22000
          # type: UDP
        - name: udp21027
          containerPort: 21027
          # type: UDP

        volumeMounts:
        # Host timezone + localtime
        - name: localtime
          mountPath: /etc/localtime
          readOnly: true
        - name: timezone
          mountPath: /etc/timezone
          readOnly: true
        # App specific mounts
        - name: syncthing-config
          mountPath: /config
        # - name: syncthing-music
        #   mountPath: /music/mp3-mirror
      volumes:
      - name: localtime
        hostPath:
          path: /etc/localtime
          type: File
      - name: timezone
        hostPath:
          path: /etc/timezone
          type: File
      - name: syncthing-config
        hostPath:
          path: /opt/configs/syncthing/config  # Adjust the path accordingly
  #     - name: syncthing-music
  #       hostPath:
  #         path: /mnt/myhdd/00music/library/mp3-mirror  # Adjust the path accordingly
  # restartPolicy: Always
